Fixed bug where navbar wouldnt collapse properly

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,10 +33,6 @@ body {
   color: #ffffff;
 }
 
-.navbar {
-  height: 70px;
-}
-
 .bg-light {
   background-color: #5a9be0 !important;
 }
